--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,57 +1,43 @@
 @import "_global.css";
-@import "../components/header/header.css";
-@import "../components/footer/footer.css";
 
 body {
-    width: 100vw;
+    width: 100%;
     height: 100vh;
 }
 
-.main {
-    position: relative;
-    display: grid;
-    grid-template-columns: 200px 1fr 150px;
-    grid-template-rows: 150px 1fr 300px;
+.Main {
     width: 100%;
     height: 100%;
-    justify-items: stretch;
-    align-items: stretch;
-    grid-gap: 20px 10px;    /* not enable on ie/edge */
 }
 
-.main > div {
-    font-size: 40px;
+.Char {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
+    width: 100%;
+    height: 100%;
+    font-size: 20vmin;
+}
 
-    &:first-child {
-        background: #f8fa;
-        grid-column: 1;
-        @mixin grid-row 1, 3;
+.Char__panel {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: calc(100% / 3);
+    height: calc(100% / 5);
+    box-shadow: 0 0 1px 0 #ccc inset;
+
+    @media (--not-sp) {
+        width: calc(100% / 5);
+        height: calc(100% / 3);
     }
 
-    &:nth-child(2) {
-        background: #8f82;
-        grid-row: 1;
-        @mixin grid-column 2, 4;
+    &:nth-child(n + 6) {
+        font-family: var(--fontFamily-mincho);
     }
 
-    &:nth-child(3) {
-        background: #88f;
-        grid-column: 2;
-        grid-row: 2;
-    }
-
-    &:nth-child(4) {
-        background: #ff88887d;
-        grid-column: 3;
-        @mixin grid-row 2, 4;
-    }
-
-    &:nth-child(5) {
-        background: #f0f8;
-        grid-row: 3;
-        @mixin grid-column 1, 3;
+    &:nth-child(n + 11) {
+        font-family: var(--fontFamily-mono);
     }
 }
