とりあえず

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -13,7 +13,7 @@ const conf = {
 <main id="main" class="Main" role="main">
     <section class="Char">
     <% [...Array(15).keys()].forEach(index => { %>
-        <div class="Char__panel"><%= index + 1 %></div>
+        <div class="-js-char-panel Char__panel">&nbsp;</div>
     <% }) %>
     </section>
 </main>
